--- a/frontend/AspireYouTubeSummariser.WebApp/Components/Pages/Weather.razor
+++ b/frontend/AspireYouTubeSummariser.WebApp/Components/Pages/Weather.razor
@@ -1,5 +1,10 @@
 ﻿@page "/weather"
 @using AspireYouTubeSummariser.WebApp.Clients
+@using Microsoft.AspNetCore.OutputCaching
+
+@attribute [StreamRendering(true)]
+@attribute [OutputCache(Duration = 5)]
+
 @inject IApiAppClient ApiApp
 
 <PageTitle>Weather</PageTitle>
